--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,35 @@
-<html>
+<!doctype html>
 
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
-    <script src="angular.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</head>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+<script src="angular.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
+<div class="container">
 
-<body>
-    <div class="container">
+	<center>
+		<h1>
+			Restaurant Ratings
+		</h1>
+	</center>
 
-        <center>
-            <h1>
-                Restaurant Ratings
-            </h1>
-        </center>
-
-        <div class="row">
-            <div class="col-sm">
-                <img src="images/mcdonalds.jpg" width="300">
-                <input type="text"  value="Add Rating"><br>
-                <input type="submit" value="Submit">
-            </div>
-            <div class="col-sm">
-                <img src="images/caferio.jpg" width="300">
-                <input type="text"  value="Add Rating"><br>
-                <input type="submit" value="Submit">
-            </div>
-            <div class="col-sm">
-                <img src="images/cheesecakefactory.jpg" width="300">
-                <input type="text"  value="Add Rating"><br>
-                <input type="submit" value="Submit">
-            </div>
-        </div>
-    </div>
-</body>
-
-</html>
+	<div class="row">
+		<div class="col-sm">
+			<img src="images/mcdonalds.jpg" width="300">
+			<input type="text"  value="Add Rating"><br>
+			<input type="submit" value="Submit">
+		</div>
+		<div class="col-sm">
+			<img src="images/caferio.jpg" width="300">
+			<input type="text"  value="Add Rating"><br>
+			<input type="submit" value="Submit">
+		</div>
+		<div class="col-sm">
+			<img src="images/cheesecakefactory.jpg" width="300">
+			<input type="text"  value="Add Rating"><br>
+			<input type="submit" value="Submit">
+		</div>
+	</div>
+</div>
