one comment box and submit button

--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,26 @@
 
 <div class="container">
 
-	<center>
-		<h1>
-			Restaurant Ratings
-		</h1>
-	</center>
+    <center>
+        <h1>
+            Restaurant Ratings
+        </h1>
 
-	<div class="row">
-		<div class="col-sm">
-			<img src="images/mcdonalds.jpg" width="300">
-			<input type="text"  value="Add Rating"><br>
-			<input type="submit" value="Submit">
-		</div>
-		<div class="col-sm">
-			<img src="images/caferio.jpg" width="300">
-			<input type="text"  value="Add Rating"><br>
-			<input type="submit" value="Submit">
-		</div>
-		<div class="col-sm">
-			<img src="images/cheesecakefactory.jpg" width="300">
-			<input type="text"  value="Add Rating"><br>
-			<input type="submit" value="Submit">
-		</div>
-	</div>
+        <input type="text" value="Add Rating">
+        <input type="submit" value="Submit">
+    </center>
+    <div class="row">
+        <div class="col-sm">
+            <img src="images/mcdonalds.jpg" width="300">
+
+        </div>
+        <div class="col-sm">
+            <img src="images/caferio.jpg" width="300">
+
+        </div>
+        <div class="col-sm">
+            <img src="images/cheesecakefactory.jpg" width="300">
+
+        </div>
+    </div>
 </div>
