--- a/public/index.html
+++ b/public/index.html
@@ -8,27 +8,44 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 <div class="container">
+    <div id='app' ng-app='app' ng-controller='mainCtrl'>
+        <center>
+            <h1>
+                Restaurant Ratings
+            </h1>
+            <form ng-submit="addPost()">
+                <input ng-model="Name" type="text" placeholder="Name">
+                <input ng-model="PostText" type="text" placeholder="Add Rating">
+                <select name='restaurantOption' ng-model="restaurantSelect" ng-options="option.name for option in availableOptions" class="form-control my-2"></select>
+                <button id="submitPost" type="submit">Submit</button>
+            </form>
+        </center>
 
-  <center>
-      <h1>
-          Restaurant Ratings
-      </h1>
-
-      <input type="text" value="Add Rating">
-      <input type="submit" value="Submit">
-  </center>
-  <div class="row">
-    <div class="col-sm">
-        <img src="images/mcdonalds.jpg" width="300">
-
+        <div class="row">
+            <div class="col-sm">
+                <img src="images/mcdonalds.jpg" width="300">
+                <ul ng-if='posts["mcdonalds"].length' class="list-group">
+                    <li class="list-group-item" ng-repeat='p in posts["mcdonalds"]'>
+                        <b>{{p.name}}</b><br>{{p.post}}
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm">
+                <img src="images/caferio.jpg" width="300">
+                <ul ng-if='posts["caferio"].length' class="list-group">
+                    <li class="list-group-item" ng-repeat='p in posts["caferio"]'>
+                        <b>{{p.name}}</b><br>{{p.post}}
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm">
+                <img src="images/cheesecakefactory.jpg" width="300">
+                <ul ng-if='posts["cheesecake"].length' class="list-group">
+                    <li class="list-group-item" ng-repeat='p in posts["cheesecake"]'>
+                        <b>{{p.name}}</b><br>{{p.post}}
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="col-sm">
-        <img src="images/caferio.jpg" width="300">
-
-    </div>
-    <div class="col-sm">
-        <img src="images/cheesecakefactory.jpg" width="300">
-
-    </div>
-  </div>
 </div>
