--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <div class="container">
   <div id='app' ng-app='app' ng-controller='mainCtrl'>
     <center>
-      <h1>
+      <h1 class="display-3">
         Restaurant Ratings
       </h1>
       <form class="mb-5" ng-submit="addPost()">
